--- a/BloggingAPI/appsettings.json
+++ b/BloggingAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-B517D2K\\SQLEXPRESS;Database=ArticlesDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "qwaszxerdfcvtyghbnuijkm!@#$%^&*()"
   }
 }
